--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
     --background-color-2: #ffc3a0;
     --button-color: #ff6b6b;
     --button-hover: #ff8787;
-    --text-color: #ff4757;
+    --text-color: #9a7bcc;
 
     /* Animations */
     --float-duration: 15s;
